# ASTRO_MENTOR

./: .gitignore  APPLICATION_READY.md  AUTHENTICATION_FIXED.md  AUTH_FIX_GUIDE.md  BUILD_COMPLETE.md  BUILD_STATUS.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_QUICK_REFERENCE.md  ENV_SETUP_GUIDE.md  INTEGRATION_GUIDE.md  LOGIN_INSTRUCTIONS.md  QUICK_START.md  QUICK_START_INTEGRATION.md  README.md  README_DEPLOYMENT.md  START_APPLICATION.md  deploy_backend.py  deploy_frontend.py  deploy_frontend_api.py  pyrightconfig.json  start-dev.bat
astramentor-backend/: .dockerignore  .env.example  .gitignore  BACKEND_COMPLETE_SUMMARY.md  BACKEND_IMPLEMENTATION_SUMMARY.md  COMPLETE_IMPLEMENTATION_ROADMAP.md  Dockerfile  FINAL_STATUS.md  IMPLEMENTATION_GUIDE.md  Makefile  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_PARTIAL_COMPLETE.md  PHASE6_PROGRESS.md  PHASE7_COMPLETE.md  README.md  poetry_out.txt  pyproject.toml  pyrightconfig.json  pytest.ini  pytest_out.txt  pytest_out_utf8.txt  requirements.txt  response.txt  ruff_errors.txt  ruff_errors_utf8.txt
astramentor-backend/alembic/: env.py
astramentor-backend/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  PHASE1_FOUNDATION.md  PHASE2_DATA_LAYER.md  PHASE3_RETRIEVAL.md  PHASE4_AI_LAYER.md
astramentor-backend/infrastructure/: README.md  app.py  cdk.json
astramentor-backend/scripts/: deploy.sh  destroy.sh  docker-build.sh  migrate.sh
astramentor-backend/src/: __init__.py
astramentor-backend/tests/: conftest.py  test_challenges.py  test_leaderboard.py  (+1 more)
(+229 files in other folders)
